@@ -43,7 +43,7 @@ import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -255,8 +255,8 @@ public abstract class AbstractArtifactFactory {
 	private String pathOf(String path) {
 		if (path.startsWith("file://")) return path.substring("file://".length());
 		try {
-			return new URL(path).getFile();
-		} catch (MalformedURLException e) {
+			return URI.create(path).toURL().getFile();
+		} catch (IllegalArgumentException | MalformedURLException e) {
 			return path;
 		}
 	}
