@@ -11,7 +11,7 @@ import io.intino.plugin.project.configuration.Version;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
@@ -45,8 +45,8 @@ public class FactoryPhaseChecker {
 	private String pathOf(String path) {
 		if (path.startsWith("file://")) return path.substring("file://".length());
 		try {
-			return new URL(path).getFile();
-		} catch (MalformedURLException e) {
+			return URI.create(path).toURL().getFile();
+		} catch (IllegalArgumentException | MalformedURLException e) {
 			return path;
 		}
 	}
